--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-22 17:28-0300\n"
+"POT-Creation-Date: 2025-10-22 17:55-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: .\recipes\models.py:24
+msgid "Title"
+msgstr "Título"
+
+#: .\recipes\models.py:87
+msgid "Recipe"
+msgstr "Receita"
+
+#: .\recipes\models.py:88
+msgid "Recipes"
+msgstr "Receitas"
 
 #: .\recipes\templates\recipes\partials\recipe.html:66
 msgid "Preparation"
@@ -29,3 +41,7 @@ msgstr "Porções"
 #: .\recipes\templates\recipes\partials\recipe.html:86
 msgid "see more"
 msgstr "ver mais"
+
+#: .\recipes\views.py:87
+msgid "Category"
+msgstr "Categoria"
